--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,9 @@ dependencies:
   shared_preferences: ^2.0.8
   http: ^0.13.4
   path_provider: ^2.0.5
-  sqflite:
+  intl: ^0.17.0
+  sqflite: ^2.0.0+4
+  connectivity: ^3.0.6
 
 dev_dependencies:
   flutter_test:
