--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   intl: ^0.17.0
   sqflite: ^2.0.0+4
   connectivity: ^3.0.6
+  google_maps_flutter: ^2.0.11
 
 dev_dependencies:
   flutter_test:
