--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_core: ^1.6.0
   firebase_messaging: ^10.0.8
   flutter_local_notifications: ^9.0.0
+  location: ^4.3.0
 
 dev_dependencies:
   flutter_test:
