--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -45,5 +45,15 @@
 
        <meta-data android:name="com.google.android.geo.API_KEY"
            android:value="AIzaSyCG5XEnHa7cEtjedADU9DOac5sew07MiE4"/>
+
+<!--       <provider-->
+<!--           android:name="vn.hunghd.flutterdownloader.DownloadedFileProvider"-->
+<!--           android:authorities="${applicationId}.flutter_downloader.provider"-->
+<!--           android:exported="false"-->
+<!--           android:grantUriPermissions="true">-->
+<!--           <meta-data-->
+<!--               android:name="android.support.FILE_PROVIDER_PATHS"-->
+<!--               android:resource="@xml/provider_paths"/>-->
+<!--       </provider>-->
     </application>
 </manifest>
