--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_messaging: ^10.0.8
   flutter_local_notifications: ^9.0.0
   location: ^4.3.0
+  url_launcher: ^6.0.12
 
 dev_dependencies:
   flutter_test:
