--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   url_launcher: ^6.0.12
   esc_pos_bluetooth: ^0.4.1
   flutter_bluetooth_basic: ^0.1.7
+  esc_pos_utils: ^1.1.0
+  image: ^3.0.8
 
 dev_dependencies:
   flutter_test:
