--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_bluetooth_basic: ^0.1.7
   esc_pos_utils: ^1.1.0
   image: ^3.0.8
+  windows1251: ^0.0.3
 
 dev_dependencies:
   flutter_test:
